# moto-testkit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
aws_testkit/: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
aws_testkit/.github/workflows/: 1-ci-feature-develop.yml  1-feature.yml  2-ci-develop-main.yml  2-develop.yml  3-main.yml  ci.yml
aws_testkit/docs/: index.md
aws_testkit/examples/: demo_pytest_async.py  demo_pytest_sync.py  demo_pytest_with_async.py  demo_pytest_with_sync.py  demo_unnitest_async.py  demo_unnitest_sync.py  demo_unnitest_with_async.py  demo_unnitest_with_sync.py
aws_testkit/examples/cloudwatchlogs/assincrono/: cloudwatchlogs_async_repository.py  test_cloudwatchlogs_pytest_async.py  test_cloudwatchlogs_pytest_async_context_manager.py  test_cloudwatchlogs_unnitest_async.py  test_cloudwatchlogs_unnitest_async_context_manager.py
aws_testkit/examples/cloudwatchlogs/asynchronous/: cloudwatchlogs_asynchronous_repository.py  test_cloudwatchlogs_pytest_async.py
aws_testkit/examples/cloudwatchlogs/sync/: test_cloudwatchlogs_unittest.py
aws_testkit/examples/cloudwatchlogs/synchronous/: cloudwatchlogs_synchronous_repository.py  test_cloudwatchlogs_pytest.py
aws_testkit/examples/dynamo/assincrono/: dynamo.py  test_dynamo_pytest.py  test_dynamo_unnitest.py
aws_testkit/examples/dynamo/asynchronous/: test_dynamo_pytest.py  (+2 more)
aws_testkit/examples/rds/: clients.py  config.py  exceptions.py  rds_repository.py  test_rds_repo_pytest.py  test_rds_repo_unittest.py
aws_testkit/src/: __init__.py  clients.py  exceptions.py  helpers.py  moto_testkit.py
aws_testkit/tests/: conftest.py  demo_ad_hoc.py  test_dynamo_pytest.py  test_dynamo_unittest.py  test_s3_async.py  test_s3_unittest_async.py  teste.py
aws_testkit/tests/integration/: test_moto_full_pytest.py  test_moto_full_unittest.py
aws_testkit/tests/units/: test_unit_pytest_clients.py  test_unit_pytest_helpers.py  test_unit_pytest_moto_testkit.py  test_unit_unnitest_clients.py  test_unit_unnitest_helpers.py  test_unit_unnitest_moto_testkit.py
(+304 files in other folders)
