[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moto-testkit"
version = "0.1.2"
description = "An extended testkit for AWS services using moto, with sync/async helpers and examples."
readme = "README.md"
authors = [
    { name = "Rafael da Silva", email = "rafaeldasilva.98@hotmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["aws", "testing", "moto", "pytest", "unittest", "dynamodb", "s3", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]

dependencies = [
    "boto3>=1.34.0",
    "aioboto3>=12.0.0",
    "pytest>=7.0.0"
]

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "I"]  # E/F = regras de lint, I = ordenação de imports (isort)
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120

[tool.setuptools]
packages = []
include-package-data = true
